vlib/v/checker/tests/invert_float_bits_error.out
vlib/v/checker/tests/invert_float_bits_error.v:2:13: error: cannot invert bits of a float 
    1 | fn main() {
    2 |     println(~3.0)
      |             ^
    3 |     println(~10.5)
    4 | }
vlib/v/checker/tests/invert_float_bits_error.v:3:13: error: cannot invert bits of a float
    1 | fn main() {
    2 |     println(~3.0)
    3 |     println(~10.5)
      |             ^
    4 | }
