vlib/v/checker/tests/invert_float_bits_error.vv
fn main() {
    println(~3.0)
    println(~10.5)
}
